[gd_scene load_steps=4 format=3 uid="uid://djtd7fhmfd8g2"]

[ext_resource type="Script" path="res://environment/spike_plant/spike_plant.gd" id="1_1aojg"]
[ext_resource type="Texture2D" uid="uid://cfpkns50k8grp" path="res://environment/spike_plant/filler_spike_plant.png" id="2_0tyk2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fujk4"]
size = Vector2(32, 12)

[node name="SpikePlant" type="Area2D"]
scale = Vector2(2, 2)
script = ExtResource("1_1aojg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0tyk2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_fujk4")

[node name="StrikeTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="StrikeTimer" to="." method="_on_strike_timer_timeout"]
